--- a/files/index.html
+++ b/files/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hello balbesinka!</title>
+	<title>приветосики Иртосики -)</title>
 </head>
 <body>
-	<h1>Hello balbesinka!</h1>
+	<h1>Спасибо за вкусный кофеек, от рулетика!)</h1>
 </body>
 </html>
